# py-actions-demo

./: README.md  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml
src/py_actions_demo/: __init__.py  app.py
tests/: test_calc.py  test_endpoints_sync.py
